--- a/BloggoFrontend/pages/signing.html
+++ b/BloggoFrontend/pages/signing.html
@@ -11,92 +11,190 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="../css/signing.css" rel="stylesheet">
-
 </head>
 <body>
-<header class="py-2">
+<!-- Header -->
+<div class="header">
   <div class="container d-flex justify-content-between align-items-center">
     <a class="navbar-brand" href="../index.html" aria-label="Bloggo Home">
       <img src="../assets/blogg.png" alt="Bloggo Logo" class="brand-logo">
     </a>
     <div>
       <a href="signup.html" class="btn">Sign up</a>
-      <a href="../index.html" class=" btn" id="btn-home">Home</a>
+      <a href="../index.html" class="btn" id="btn-home">Home</a>
     </div>
   </div>
-</header>
+</div>
 
-<main class="container py-3">
-  <div class="auth-container">
-    <div class="auth-header">
-      <h1>Welcome back</h1>
-      <p>Sign in to access your stories, bookmarks, and community.</p>
-    </div>
-
-    <form id="signin-form">
-      <div class="mb-3">
-        <label for="username" class="form-label">Username</label>
-        <input type="text" class="form-control" id="username" name="username" required placeholder="Enter your username">
-        <div class="invalid-feedback">Please enter your username.</div>
+<!-- Main Split Screen Container -->
+<div class="main-container">
+  <!-- Left Side - Form -->
+  <div class="form-section">
+    <div class="auth-container">
+      <div class="auth-header">
+        <h1>Welcome back</h1>
+        <p>Sign in to access your stories, bookmarks, and community.</p>
       </div>
 
-      <div class="mb-3">
-        <label for="password" class="form-label">Password</label>
-        <input type="password" class="form-control" id="password" name="password" required placeholder="Enter your password">
-        <div class="invalid-feedback">Please enter your password.</div>
+      <form id="signin-form">
+        <div class="form-group mb-3">
+          <label for="username" class="form-label">Username</label>
+          <input type="text" class="form-control" id="username" name="username" required placeholder="Enter your username">
+          <div class="invalid-feedback">Please enter your username.</div>
+        </div>
+
+        <div class="form-group mb-3">
+          <label for="password" class="form-label">Password</label>
+          <input type="password" class="form-control" id="password" name="password" required placeholder="Enter your password">
+          <div class="invalid-feedback">Please enter your password.</div>
+        </div>
+
+        <div class="forgot-password">
+          <a href="forgot-password.html">Forgot password?</a>
+        </div>
+
+        <div class="form-check mb-4">
+          <input class="form-check-input" type="checkbox" id="remember-me">
+          <label class="form-check-label" for="remember-me">
+            Remember me
+          </label>
+        </div>
+
+        <button type="submit" class="btn btn-primary w-100">Sign In</button>
+      </form>
+
+      <div class="oauth-section">
+        <div class="divider">or</div>
+        <div class="d-flex gap-3" id="inline">
+          <button class="oauth-circle-btn" id="google-auth">
+            <img alt="Google" src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg"/>
+          </button>
+          <button class="oauth-circle-btn" id="facebook-auth">
+            <img alt="Facebook" src="https://www.svgrepo.com/show/475647/facebook-color.svg"/>
+          </button>
+          <button class="oauth-circle-btn" id="linkedin-auth">
+            <img alt="LinkedIn" src="https://www.svgrepo.com/show/448234/linkedin.svg"/>
+          </button>
+        </div>
+        <div class="signup-link">
+          Don't have an account? <a href="signup.html">Sign up</a>
+        </div>
       </div>
-
-      <div class="forgot-password">
-        <a href="forgot-password.html">Forgot password?</a>
-      </div>
-
-      <div class="form-check mb-4">
-        <input class="form-check-input" type="checkbox" id="remember-me">
-        <label class="form-check-label" for="remember-me">
-          Remember me
-        </label>
-      </div>
-
-      <button type="submit" class="btn btn-primary w-100">Sign In</button>
-    </form>
-
-    <div class="divider">or</div>
-    <div class="d-flex gap-3" id="inline">
-      <!-- Google -->
-      <button class="oauth-circle-btn" id="google-auth">
-        <img alt="Google" src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg"/>
-      </button>
-
-      <!-- Facebook -->
-      <button class="oauth-circle-btn" id="facebook-auth">
-        <img alt="Facebook" src="https://www.svgrepo.com/show/475647/facebook-color.svg"/>
-      </button>
-
-      <!-- LinkedIn -->
-      <button class="oauth-circle-btn" id="linkedin-auth">
-        <img alt="LinkedIn" src="https://www.svgrepo.com/show/448234/linkedin.svg"/>
-      </button>
-    </div>
-    <div class="signup-link">
-      Don't have an account? <a href="signup.html">Sign up</a>
-    </div>
-  </div>
-</main>
-
-<footer class="py-4 mt-5 bg-light">
-  <div class="container d-flex justify-content-between align-items-center flex-wrap">
-    <p class="mb-0">© <span id="year"></span> Bloggo. All rights reserved.</p>
-    <div class="d-flex gap-3">
-      <a href="#" class="text-decoration-none">Privacy</a>
-      <a href="#" class="text-decoration-none">Terms</a>
-      <a href="#" class="text-decoration-none">Contact</a>
     </div>
   </div>
-</footer>
 
-<!-- Bootstrap JS Bundle with Popper -->
+  <!-- Right Side - Image -->
+  <div class="image-section">
+    <div class="image-content">
+      <h2>Join Our Community</h2>
+      <p>Connect with writers, discover amazing stories, and share your own creative journey with the world.</p>
+    </div>
+  </div>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="../js/signing.js"></script>
+<!--<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    const form = document.getElementById('signin-form');
+    const submitBtn = form.querySelector('button[type="submit"]');
+    const inputs = form.querySelectorAll('.form-control');
+
+    // Add focus effects to form inputs
+    inputs.forEach(input => {
+      input.addEventListener('focus', function() {
+        this.parentElement.classList.add('focused');
+      });
+
+      input.addEventListener('blur', function() {
+        this.parentElement.classList.remove('focused');
+      });
+
+      input.addEventListener('input', function() {
+        this.classList.remove('error');
+        const feedback = this.parentElement.querySelector('.invalid-feedback');
+        if (feedback) {
+          feedback.style.display = 'none';
+        }
+      });
+    });
+
+    // Enhanced form submission
+    form.addEventListener('submit', function(e) {
+      e.preventDefault();
+
+      submitBtn.classList.add('loading');
+      submitBtn.disabled = true;
+
+      setTimeout(() => {
+        submitBtn.classList.remove('loading');
+        submitBtn.disabled = false;
+
+        const successMsg = document.createElement('div');
+        successMsg.className = 'success-message';
+        successMsg.textContent = 'Sign in successful! Redirecting...';
+        form.insertBefore(successMsg, form.firstChild);
+
+        setTimeout(() => {
+          window.location.href = '../dashboard.html';
+        }, 2000);
+      }, 2000);
+    });
+
+    // OAuth button interactions
+    const oauthButtons = document.querySelectorAll('.oauth-circle-btn');
+    oauthButtons.forEach(btn => {
+      btn.addEventListener('click', function(e) {
+        e.preventDefault();
+
+        this.style.transform = 'translateY(-2px) scale(1.05)';
+
+        setTimeout(() => {
+          this.style.transform = '';
+        }, 200);
+
+        console.log('OAuth authentication initiated for:', this.id);
+      });
+    });
+
+    // Keyboard navigation
+    document.addEventListener('keydown', function(e) {
+      if (e.key === 'Enter' && e.target.classList.contains('form-control')) {
+        const formInputs = Array.from(inputs);
+        const currentIndex = formInputs.indexOf(e.target);
+
+        if (currentIndex < formInputs.length - 1) {
+          formInputs[currentIndex + 1].focus();
+        } else {
+          submitBtn.focus();
+        }
+      }
+    });
+
+    // Parallax effect for form section background
+    let ticking = false;
+
+    function updateParallax() {
+      const scrolled = window.pageYOffset;
+      const parallax = scrolled * 0.2;
+
+      const formSection = document.querySelector('.form-section::before');
+      if (formSection) {
+        formSection.style.transform = `translateY(${parallax}px)`;
+      }
+      ticking = false;
+    }
+
+    function requestTick() {
+      if (!ticking) {
+        requestAnimationFrame(updateParallax);
+        ticking = true;
+      }
+    }
+
+    window.addEventListener('scroll', requestTick);
+  });
+</script>-->
 
 </body>
 </html>
