--- a/BloggoFrontend/pages/signup.html
+++ b/BloggoFrontend/pages/signup.html
@@ -14,107 +14,87 @@
 
 </head>
 <body>
-<header class="py-2">
-    <div class="container d-flex justify-content-between align-items-center" >
+<div class="header">
+    <div class="container d-flex justify-content-between align-items-center">
         <a class="navbar-brand" href="../index.html" aria-label="Bloggo Home">
             <img src="../assets/blogg.png" alt="Bloggo Logo" class="brand-logo">
         </a>
         <div>
-            <a href="signing.html" class="btn ">Log in</a>
-            <a href="../index.html" class="btn " id="btn-home">Home</a>
+            <a href="signing.html" class="btn">Sign in</a>
+            <a href="../index.html" class="btn" id="btn-home">Home</a>
         </div>
     </div>
-</header>
+</div>
 
-<main class="container py-3">
-    <div class="auth-container">
-        <div class="auth-header">
-            <h1>Join Bloggo</h1>
-            <p>Start writing, reading, and connecting with a community of thinkers.</p>
+<main class="main-container">
+    <div class="form-section">
+        <div class="auth-container">
+            <div class="auth-header">
+                <h1>Join Bloggo</h1>
+                <p>Start writing, reading, and connecting with a community of thinkers.</p>
+            </div>
+
+            <form id="signup-form">
+                <!-- Row 1: Username + Email -->
+                <div class="row">
+                    <div class="col-md-6 mb-3">
+                        <label for="username" class="form-label">Username</label>
+                        <input type="text" class="form-control" id="username" name="username" required placeholder="Choose a unique username">
+                        <div class="invalid-feedback">Username is required and must be unique.</div>
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="email" name="email" required placeholder="your@email.com">
+                        <div class="invalid-feedback">Please enter a valid email address.</div>
+                    </div>
+                </div>
+
+                <!-- Row 2: Password + Confirm Password -->
+                <div class="row">
+                    <div class="col-md-6 mb-3">
+                        <label for="password" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="password" name="password" required placeholder="At least 8 characters">
+                        <div class="invalid-feedback">Password must be at least 8 characters.</div>
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        <label for="confirm-password" class="form-label">Confirm Password</label>
+                        <input type="password" class="form-control" id="confirm-password" name="confirmPassword" required placeholder="Confirm your password">
+                        <div class="invalid-feedback">Passwords must match.</div>
+                    </div>
+                </div>
+
+                <button type="submit" class="btn btn-primary w-100">Create Account</button>
+            </form>
+
+            <div class="divider">or</div>
+
+            <div class="oauth-section">
+                <div class="d-flex gap-3 justify-content-center">
+                    <button class="oauth-circle-btn" id="google-auth">
+                        <img alt="Google" src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg"/>
+                    </button>
+                    <button class="oauth-circle-btn" id="facebook-auth">
+                        <img alt="Facebook" src="https://www.svgrepo.com/show/475647/facebook-color.svg"/>
+                    </button>
+                    <button class="oauth-circle-btn" id="linkedin-auth">
+                        <img alt="LinkedIn" src="https://www.svgrepo.com/show/448234/linkedin.svg"/>
+                    </button>
+                </div>
+                <div class="signup-link mt-3">
+                    Already have an account? <a href="signing.html">Log in</a>
+                </div>
+            </div>
         </div>
 
-        <div class="text-center">
-            <img id="profile-preview" src="https://ui-avatars.com/api/?name=New+User&background=2563eb&color=fff&size=100" alt="Profile preview" class="profile-preview">
-            <label for="profile-upload" class="profile-upload-label">Upload Profile Image</label>
-            <input type="file" id="profile-upload" class="profile-upload" accept="image/*">
-        </div>
-
-        <form id="signup-form">
-            <div class="mb-3">
-                <label for="username" class="form-label">Username</label>
-                <input type="text" class="form-control" id="username" name="username" required placeholder="Choose a unique username">
-                <div class="invalid-feedback">Username is required and must be unique.</div>
-            </div>
-
-            <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" name="email" required placeholder="your@email.com">
-                <div class="invalid-feedback">Please enter a valid email address.</div>
-            </div>
-
-            <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" name="password" required placeholder="At least 8 characters">
-                <div class="invalid-feedback">Password must be at least 8 characters.</div>
-            </div>
-
-            <div class="mb-3">
-                <label for="confirm-password" class="form-label">Confirm Password</label>
-                <input type="password" class="form-control" id="confirm-password" name="confirmPassword" required placeholder="Confirm your password">
-                <div class="invalid-feedback">Passwords must match.</div>
-            </div>
-
-            <div class="mb-3">
-                <label for="bio" class="form-label">Short Bio (Optional)</label>
-                <textarea class="form-control" id="bio" name="bio" rows="3" placeholder="Tell us about yourself"></textarea>
-            </div>
-
-            <div class="form-check mb-4">
-                <input class="form-check-input" type="checkbox" id="terms" required>
-                <label class="form-check-label" for="terms">
-                    I agree to Bloggo's <a href="#">Terms of Service</a> and <a href="#">Privacy Policy</a>
-                </label>
-                <div class="invalid-feedback">You must agree to the terms to continue.</div>
-            </div>
-
-            <button type="submit" class="btn btn-primary w-100">Create Account</button>
-        </form>
-
-        <div class="divider">or</div>
-
-        <div class="d-flex gap-3" id="inline">
-            <!-- Google -->
-            <button class="oauth-circle-btn" id="google-auth">
-                <img alt="Google" src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg"/>
-            </button>
-
-            <!-- Facebook -->
-            <button class="oauth-circle-btn" id="facebook-auth">
-                <img alt="Facebook" src="https://www.svgrepo.com/show/475647/facebook-color.svg"/>
-            </button>
-
-            <!-- LinkedIn -->
-            <button class="oauth-circle-btn" id="linkedin-auth">
-                <img alt="LinkedIn" src="https://www.svgrepo.com/show/448234/linkedin.svg"/>
-            </button>
-        </div>
-
-        <div class="login-link">
-            Already have an account? <a href="signing.html">Log in</a>
+    </div>
+    <!-- Right Side - Image -->
+    <div class="image-section">
+        <div class="image-content">
+            <h2>Join Our Community</h2>
+            <p>Connect with writers, discover amazing stories, and share your own creative journey with the world.</p>
         </div>
     </div>
 </main>
-
-<footer class="py-4 mt-5 bg-light">
-    <div class="container d-flex justify-content-between align-items-center flex-wrap">
-        <p class="mb-0">© <span id="year"></span> Bloggo. All rights reserved.</p>
-        <div class="d-flex gap-3">
-            <a href="#" class="text-decoration-none">Privacy</a>
-            <a href="#" class="text-decoration-none">Terms</a>
-            <a href="#" class="text-decoration-none">Contact</a>
-        </div>
-    </div>
-</footer>
 
 <!-- Bootstrap JS Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
