--- a/BloggoFrontend/index.html
+++ b/BloggoFrontend/index.html
@@ -5,158 +5,226 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bloggo — Read. Write. Belong.</title>
     <meta name="description" content="Bloggo is a membership‑driven blogging & social reading platform." />
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Lora:wght@500;700&display=swap" rel="stylesheet">
+
+    <!-- Custom CSS -->
     <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-<header>
-    <div class="container nav">
-        <a class="brand" href="#" aria-label="Bloggo Home">
-            <img src="assets/blogg.png" alt="Bloggo Logo" class="brand-logo">
-        </a>
-        <nav class="nav-actions" aria-label="Primary">
-            <a class="btn" href="#explore">Explore</a>
-            <a class="btn" href="#pricing">Pricing</a>
-            <a class="btn" id="login-btn" href="pages/signing.html">Log in</a>
-            <a class="btn btn-primary" id="signup-btn" href="pages/signup.html">Start Writing</a>
-        </nav>
-    </div>
+<!-- Header -->
+<header class="sticky-top">
+    <nav class="navbar navbar-expand-lg py-3">
+        <div class="container">
+            <a class="navbar-brand" href="#" aria-label="Bloggo Home">
+                <img src="assets/blogg.png" alt="Bloggo Logo" class="brand-logo">
+            </a>
 
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="navbar-nav ms-auto align-items-center">
+                    <a class="nav-link me-3" href="#explore">Explore</a>
+                    <a class="nav-link me-3" href="#pricing">Pricing</a>
+                    <a class="btn btn-outline-secondary me-2" id="login-btn" href="pages/signing.html">Log in</a>
+                    <a class="btn btn-primary" id="signup-btn" href="pages/signup.html">Start Writing</a>
+                </div>
+            </div>
+        </div>
+    </nav>
 </header>
 
 <main class="container">
     <!-- HERO -->
-    <section class="hero" aria-labelledby="hero-title">
-        <div>
-            <div class="hero-card" role="note" aria-label="Membership highlight">
-                <svg width="22" height="22" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M12 3l2.09 6.26H21l-5.17 3.76L16.91 21 12 17.77 7.09 21l1.08-7.98L3 9.26h6.91L12 3z" stroke="currentColor" stroke-width="1.5"/></svg>
-                <span><strong>Join writers you love.</strong> Members read ad‑free and earn from their stories.</span>
-            </div>
-            <div id="space"></div>
-            <h1 id="hero-title">Read deeply. Write boldly. Belong to the conversation.</h1>
-            <p>Bloggo is a membership‑driven platform where ideas meet readers. Start your first story in minutes, or follow topics you care about.</p>
-            <div class="hero-cta">
-                <button class="btn btn-primary" id="cta-start">Start Writing</button>
-                <button class="btn" id="cta-join">Join the Community</button>
-            </div>
-            <div style="margin-top:18px" class="auth-quick" aria-label="Quick sign in">
-                <!-- Google -->
-                <button class="oauth" id="google-auth">
-                    <img alt="Google" width="18" height="18" src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" />
-                    Continue with Google
-                </button>
+    <section class="hero py-5" aria-labelledby="hero-title">
+        <div class="row align-items-center">
+            <div class="col-lg-6">
+                <div class="hero-card mb-4" role="note" aria-label="Membership highlight">
+                    <div class="d-flex align-items-center">
+                        <svg width="22" height="22" viewBox="0 0 24 24" fill="none" aria-hidden="true" class="me-2">
+                            <path d="M12 3l2.09 6.26H21l-5.17 3.76L16.91 21 12 17.77 7.09 21l1.08-7.98L3 9.26h6.91L12 3z" stroke="currentColor" stroke-width="1.5"/>
+                        </svg>
+                        <span><strong>Join writers you love.</strong> Members read ad‑free and earn from their stories.</span>
+                    </div>
+                </div>
 
-                <!-- Facebook -->
-                <button class="oauth" id="facebook-auth">
-                    <img alt="Facebook" width="18" height="18" src="https://www.svgrepo.com/show/475647/facebook-color.svg" />
-                    Continue with Facebook
-                </button>
+                <h1 id="hero-title" class="display-4 fw-bold mb-4">Read deeply. Write boldly. Belong to the conversation.</h1>
+                <p class="lead mb-3" style="font-size: 15px">Bloggo is a membership‑driven platform where ideas meet readers. Start your first story in minutes, or follow topics you care about.</p>
 
-                <!-- LinkedIn -->
-                <button class="oauth" id="linkedin-auth">
-                    <img alt="LinkedIn" width="18" height="18" src="https://www.svgrepo.com/show/448234/linkedin.svg" />
-                    Continue with LinkedIn
-                </button>
+                <div class="hero-cta d-flex flex-wrap gap-2 mb-4">
+                    <button class="btn btn-primary btn-lg" id="cta-start">Start Writing</button>
+                    <button class="btn btn-outline-secondary btn-lg" id="cta-join">Join the Community</button>
+                </div>
+
+                <div class="auth-quick" aria-label="Quick sign in">
+                    <div class="d-flex flex-content gap-2">
+                        <!-- Google -->
+                        <button class="oauth-btn" id="google-auth">
+                            <img alt="Google" src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" />
+                        </button>
+
+                        <!-- Facebook -->
+                        <button class="oauth-btn" id="facebook-auth">
+                            <img alt="Facebook" src="https://www.svgrepo.com/show/475647/facebook-color.svg" />
+                        </button>
+
+                        <!-- LinkedIn -->
+                        <button class="oauth-btn" id="linkedin-auth">
+                            <img alt="LinkedIn" src="https://www.svgrepo.com/show/448234/linkedin.svg" />
+                        </button>
+                    </div>
+                </div>
+
             </div>
 
+            <div class="col-lg-6 d-none d-lg-block">
+                <div class="hero-image">
+                    <img src="https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1472&q=80" alt="Person writing on laptop" class="img-fluid rounded-4">
+                </div>
+            </div>
         </div>
     </section>
 
     <!-- TRENDING CAROUSEL -->
-    <section class="section" aria-labelledby="trending-title">
-        <h2 id="trending-title">Trending on Bloggo</h2>
-        <div class="carousel" id="carousel" aria-roledescription="carousel">
-            <div class="track" id="track">
-                <article class="slide" aria-label="Slide 1: Designing for Focus">
-                    <img src="https://images.unsplash.com/photo-1515879218367-8466d910aaa4?q=80&w=1600&auto=format&fit=crop" alt="Minimal workspace" />
-                    <div class="caption">
-                        <h3>Designing for Focus: Minimal UI that Amplifies Reading</h3>
-                        <p>UX · 8 min read · 12k reads</p>
+    <section class="section py-5" aria-labelledby="trending-title">
+        <h2 id="trending-title" class="h2 fw-bold mb-4">Trending on Bloggo</h2>
+
+        <div id="bloggoCarousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner rounded-4 overflow-hidden">
+                <div class="carousel-item active">
+                    <div class="position-relative">
+                        <img src="https://images.unsplash.com/photo-1515879218367-8466d910aaa4?q=80&w=1600&auto=format&fit=crop" class="d-block w-100 carousel-img" alt="Minimal workspace">
+                        <div class="carousel-caption">
+                            <h3>Designing for Focus: Minimal UI that Amplifies Reading</h3>
+                            <p>UX · 8 min read · 12k reads</p>
+                        </div>
                     </div>
-                </article>
-                <article class="slide" aria-label="Slide 2: From Draft to Story">
-                    <img src="https://images.unsplash.com/photo-1516251193007-45ef944ab0c6?q=80&w=1600&auto=format&fit=crop" alt="Notebook and pen on desk" />
-                    <div class="caption">
-                        <h3>From Draft to Story: A Writer's Practical Workflow</h3>
-                        <p>Writing · 6 min read · 9.4k reads</p>
+                </div>
+                <div class="carousel-item">
+                    <div class="position-relative">
+                        <img src="https://images.unsplash.com/photo-1516251193007-45ef944ab0c6?q=80&w=1600&auto=format&fit=crop" class="d-block w-100 carousel-img" alt="Notebook and pen on desk">
+                        <div class="carousel-caption">
+                            <h3>From Draft to Story: A Writer's Practical Workflow</h3>
+                            <p>Writing · 6 min read · 9.4k reads</p>
+                        </div>
                     </div>
-                </article>
+                </div>
             </div>
-            <div class="ctrl" aria-hidden="false">
-                <button class="prev" aria-label="Previous slide" id="prev" title="Previous">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none"><path d="M15 19l-7-7 7-7" stroke="#0f172a" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                </button>
-                <button class="next" aria-label="Next slide" id="next" title="Next">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none"><path d="M9 5l7 7-7 7" stroke="#0f172a" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                </button>
-            </div>
-            <div class="dots" id="dots" aria-label="Slide indicators"></div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#bloggoCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#bloggoCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
     </section>
 
     <!-- CATEGORIES -->
-    <section class="section" aria-labelledby="categories-title" id="explore">
-        <h2 id="categories-title">Explore by Category</h2>
-        <div class="grid">
-            <article class="cat" tabindex="0">
-                <div class="cat-thumb"><img src="https://images.unsplash.com/photo-1518770660439-4636190af475?q=80&w=1200&auto=format&fit=crop" alt="Tech gadgets on a desk"></div>
-                <div class="cat-body">
-                    <span class="pill">Tech</span>
-                    <p style="margin:8px 0 0;color:var(--muted)">AI, Programming, Gadgets</p>
-                </div>
-            </article>
-            <article class="cat" tabindex="0">
-                <div class="cat-thumb"><img src="https://images.unsplash.com/photo-1478144592103-25e218a04891?q=80&w=1200&auto=format&fit=crop" alt="Travel road and mountains"></div>
-                <div class="cat-body">
-                    <span class="pill">Travel</span>
-                    <p style="margin:8px 0 0;color:var(--muted)">Guides, Stories, Tips</p>
-                </div>
-            </article>
-            <article class="cat" tabindex="0">
-                <div class="cat-thumb"><img src="https://images.unsplash.com/photo-1501621667575-af81f1f0bacc?q=80&w=1200&auto=format&fit=crop" alt="Healthy food bowl"></div>
-                <div class="cat-body">
-                    <span class="pill">Lifestyle</span>
-                    <p style="margin:8px 0 0;color:var(--muted)">Wellness, Habits, Minimalism</p>
-                </div>
-            </article>
-            <article class="cat" tabindex="0">
-                <div class="cat-thumb"><img src="https://images.unsplash.com/photo-1529078155058-5d716f45d604?q=80&w=1200&auto=format&fit=crop" alt="Books on a shelf"></div>
-                <div class="cat-body">
-                    <span class="pill">Books</span>
-                    <p style="margin:8px 0 0;color:var(--muted)">Reviews, Highlights, Notes</p>
-                </div>
-            </article>
-            <article class="cat" tabindex="0">
-                <div class="cat-thumb"><img src="https://images.unsplash.com/photo-1441984904996-e0b6ba687e04?q=80&w=1200&auto=format&fit=crop" alt="Fashion items on a table"></div>
-                <div class="cat-body">
-                    <span class="pill">Creative</span>
-                    <p style="margin:8px 0 0;color:var(--muted)">Design, Art, Photography</p>
-                </div>
-            </article>
-            <article class="cat" tabindex="0">
-                <div class="cat-thumb"><img src="https://images.unsplash.com/photo-1483721310020-03333e577078?q=80&w=1200&auto=format&fit=crop" alt="Coffee and code"></div>
-                <div class="cat-body">
-                    <span class="pill">Career</span>
-                    <p style="margin:8px 0 0;color:var(--muted)">Interviews, Growth, Remote</p>
-                </div>
-            </article>
+    <section class="section py-5" aria-labelledby="categories-title" id="explore">
+        <h2 id="categories-title" class="h2 fw-bold mb-4">Explore by Category</h2>
+
+        <div class="row g-4">
+            <div class="col-md-6 col-lg-4">
+                <article class="cat-card h-100">
+                    <div class="cat-thumb">
+                        <img src="https://images.unsplash.com/photo-1518770660439-4636190af475?q=80&w=1200&auto=format&fit=crop" alt="Tech gadgets on a desk" class="img-fluid">
+                    </div>
+                    <div class="cat-body p-3">
+                        <span class="badge bg-primary mb-2">Tech</span>
+                        <p class="text-muted mb-0">AI, Programming, Gadgets</p>
+                    </div>
+                </article>
+            </div>
+
+            <div class="col-md-6 col-lg-4">
+                <article class="cat-card h-100">
+                    <div class="cat-thumb">
+                        <img src="https://images.unsplash.com/photo-1478144592103-25e218a04891?q=80&w=1200&auto=format&fit=crop" alt="Travel road and mountains" class="img-fluid">
+                    </div>
+                    <div class="cat-body p-3">
+                        <span class="badge bg-success mb-2">Travel</span>
+                        <p class="text-muted mb-0">Guides, Stories, Tips</p>
+                    </div>
+                </article>
+            </div>
+
+            <div class="col-md-6 col-lg-4">
+                <article class="cat-card h-100">
+                    <div class="cat-thumb">
+                        <img src="https://images.unsplash.com/photo-1501621667575-af81f1f0bacc?q=80&w=1200&auto=format&fit=crop" alt="Healthy food bowl" class="img-fluid">
+                    </div>
+                    <div class="cat-body p-3">
+                        <span class="badge bg-info text-dark mb-2">Lifestyle</span>
+                        <p class="text-muted mb-0">Wellness, Habits, Minimalism</p>
+                    </div>
+                </article>
+            </div>
+
+            <div class="col-md-6 col-lg-4">
+                <article class="cat-card h-100">
+                    <div class="cat-thumb">
+                        <img src="https://images.unsplash.com/photo-1529078155058-5d716f45d604?q=80&w=1200&auto=format&fit=crop" alt="Books on a shelf" class="img-fluid">
+                    </div>
+                    <div class="cat-body p-3">
+                        <span class="badge bg-warning text-dark mb-2">Books</span>
+                        <p class="text-muted mb-0">Reviews, Highlights, Notes</p>
+                    </div>
+                </article>
+            </div>
+
+            <div class="col-md-6 col-lg-4">
+                <article class="cat-card h-100">
+                    <div class="cat-thumb">
+                        <img src="https://images.unsplash.com/photo-1441984904996-e0b6ba687e04?q=80&w=1200&auto=format&fit=crop" alt="Fashion items on a table" class="img-fluid">
+                    </div>
+                    <div class="cat-body p-3">
+                        <span class="badge bg-purple mb-2">Creative</span>
+                        <p class="text-muted mb-0">Design, Art, Photography</p>
+                    </div>
+                </article>
+            </div>
+
+            <div class="col-md-6 col-lg-4">
+                <article class="cat-card h-100">
+                    <div class="cat-thumb">
+                        <img src="https://images.unsplash.com/photo-1483721310020-03333e577078?q=80&w=1200&auto=format&fit=crop" alt="Coffee and code" class="img-fluid">
+                    </div>
+                    <div class="cat-body p-3">
+                        <span class="badge bg-dark mb-2">Career</span>
+                        <p class="text-muted mb-0">Interviews, Growth, Remote</p>
+                    </div>
+                </article>
+            </div>
         </div>
     </section>
 </main>
 
-<footer>
-    <div class="container" style="display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap">
-        <p>© <span id="year"></span> Bloggo. All rights reserved.</p>
-        <div style="display:flex;gap:12px">
-            <a href="#">Privacy</a>
-            <a href="#">Terms</a>
-            <a href="#">Contact</a>
+<footer class="py-5 mt-5">
+    <div class="container">
+        <div class="d-flex flex-column flex-md-row justify-content-between align-items-center">
+            <p class="mb-2 mb-md-0">© <span id="year"></span> Bloggo. All rights reserved.</p>
+            <div class="d-flex gap-3">
+                <a href="#" class="text-decoration-none">Privacy</a>
+                <a href="#" class="text-decoration-none">Terms</a>
+                <a href="#" class="text-decoration-none">Contact</a>
+            </div>
         </div>
     </div>
 </footer>
-<script src="js/main.js"></script>
 
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Custom JS -->
+<script src="js/main.js"></script>
 </body>
 </html>
