--- a/BloggoFrontend/pages/admin-action.html
+++ b/BloggoFrontend/pages/admin-action.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Bloggo — Admin Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
     <link href="../css/admin-dashboard.css" rel="stylesheet">
 </head>
 <body>
